--- a/ShareProject/.classpath
+++ b/ShareProject/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/selenium-2.40.0/selenium-server-standalone-2.44.0 (1).jar"/>
+	<classpathentry kind="lib" path="C:/jars/poi-3.6.jar"/>
+	<classpathentry kind="lib" path="C:/jars/poi-ooxml-3.5-FINAL.jar"/>
+	<classpathentry kind="lib" path="C:/jars/poi-ooxml-schemas-3.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
