--- a/ShareProject/bin/resources/DBDetails.properties
+++ b/ShareProject/bin/resources/DBDetails.properties
@@ -1,6 +1,10 @@
 ##### DATABASE DETAILS ######
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.driver.url=jdbc.driver.url=jdbc:oracle:thin:@lnxdb-dev-vm-233.cisco.com:1522:OPSRDEV
-DatabaseUsername = QACAUTOUSR
-DatabasePassword = 1s8O12e
+jdbc.driver.url=
+DatabaseUsername = 
+DatabasePassword = 
 
+### Browser Proxy Setting ####
+
+proxyPort=1337
+proxyHost=127.0.0.1
