--- a/ShareProject/bin/resources/DBDetails.properties
+++ b/ShareProject/bin/resources/DBDetails.properties
@@ -1,10 +1,14 @@
 ##### DATABASE DETAILS ######
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.driver.url=
+jdbcDriver=oracle.jdbc.driver.OracleDriver
+jdbcDriverUrl=
 DatabaseUsername = 
-DatabasePassword = 
+DatabasePassword = 123
 
 ### Browser Proxy Setting ####
 
 proxyPort=1337
 proxyHost=127.0.0.1
+
+#####SQL Queries####
+
+SelectQuery=select * from table where column_name='abc'
