--- a/ShareProject/.classpath
+++ b/ShareProject/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="C:/jars/poi-3.6.jar"/>
 	<classpathentry kind="lib" path="C:/jars/poi-ooxml-3.5-FINAL.jar"/>
 	<classpathentry kind="lib" path="C:/jars/poi-ooxml-schemas-3.7.jar"/>
+	<classpathentry kind="lib" path="C:/jars/java-mail-1.4.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
