--- a/ShareProject/.classpath
+++ b/ShareProject/.classpath
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/selenium-2.40.0/selenium-server-standalone-2.44.0 (1).jar"/>
-	<classpathentry kind="lib" path="C:/jars/poi-3.6.jar"/>
-	<classpathentry kind="lib" path="C:/jars/poi-ooxml-3.5-FINAL.jar"/>
-	<classpathentry kind="lib" path="C:/jars/poi-ooxml-schemas-3.7.jar"/>
-	<classpathentry kind="lib" path="C:/jars/java-mail-1.4.4.jar"/>
-	<classpathentry kind="lib" path="C:/jars/com4j.jar"/>
-	<classpathentry kind="lib" path="C:/jars/com.mercury.qualitycenter.otaclient-9.2.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
