--- a/ShareProject/pom.xml
+++ b/ShareProject/pom.xml
@@ -45,6 +45,12 @@
 		</plugins>
 	</build>
   <dependencies>
+   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.15</version>
+</dependency>
    
     <dependency>
 			<groupId>org.testng</groupId>
