--- a/ShareProject/pom.xml
+++ b/ShareProject/pom.xml
@@ -31,6 +31,19 @@
 			</resource>
 		</resources>
 		<plugins>
+		<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+      <webResources>
+        <resource>
+          <!-- this is relative to the pom.xml directory -->
+          <directory>src/main/resources/MavenAssignmentPro</directory>
+        </resource>
+      </webResources>
+    </configuration>
+  </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -68,5 +81,10 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.5</version>
 		</dependency>
+		<dependency>
+	<groupId>com.googlecode.json-simple</groupId>
+	<artifactId>json-simple</artifactId>
+	<version>1.1</version>
+</dependency>
   </dependencies>
 </project>
