--- a/ShareProject/src/test/java/propertyfiles/DBDetail.properties
+++ b/ShareProject/src/test/java/propertyfiles/DBDetail.properties
@@ -3,7 +3,10 @@ jdbcDriver=oracle.jdbc.driver.OracleDriver
 jdbcDriverUrl=
 DatabaseUsername = 
 DatabasePassword = 123
-
+#### Excel File as Data Source
+##Excel File should be kept inside propertyfiles package
+DataProviderExcelPath=System.getProperty("user.dir") + "\\ApplicationFlowDataDevBox.xls"
+DataProviderExcelFileSheetName=Sheet1
 ### Browser Proxy Setting ####
 
 proxyPort=1337
