--- a/ShareProject/pom.xml
+++ b/ShareProject/pom.xml
@@ -44,17 +44,29 @@
       </webResources>
     </configuration>
   </plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
 				<configuration>
-					<!-- Configuring the test suites to check executed fine -->
+				<useSystemClassLoader>false</useSystemClassLoader>
+					Configuring the test suites to check executed fine
 					<suiteXmlFiles>
 						<suiteXmlFile>${project.basedir}/testNG.xml</suiteXmlFile>
+						<suiteXmlFile>testNG.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
-			</plugin>
+			</plugin> -->
+			<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testNG.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
   <dependencies>
@@ -63,6 +75,12 @@
     <groupId>org.apache.poi</groupId>
     <artifactId>poi</artifactId>
     <version>3.15</version>
+</dependency>
+   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.9</version>
 </dependency>
    
     <dependency>
